Fix backdrop display and alignment properties
Updated backdrop style to use 'display: none' instead of 'visibility: hidden' and corrected alignment property.

--- a/style/style.css
+++ b/style/style.css
@@ -114,22 +114,19 @@ button:active {
 
 #backdrop {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  aligh-items: center;
   top: 0%;
   bottom: 0%;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.377);
   z-index: 1;
-  visibility: hidden;
+  display: none;
 }
 
 #contents {
-  /* position: absolute;
+  position: absolute;
   top: 20%;
-  left: 20%; */
+  left: 10%;
   width: 415px;
   height: max-content;
   background-color: white;
